--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "testingforci-cd",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "forever --minUptime 5000 --spinSleepTime 3000 start app.js",
+    "server": "pm2 start index.js --watch"
   },
   "author": "Vinit",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.3"
+    "forever": "^4.0.3",
+    "nodemon": "^3.0.3",
+    "pm2": "^5.3.1"
   }
 }
