--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "forever --minUptime 5000 --spinSleepTime 3000 start app.js",
-    "server": "pm2 start index.js --watch"
+    "server": "pm2 start app.js --watch"
   },
   "author": "Vinit",
   "license": "ISC",
